fullmaterial/k8s/ingress/ingress.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
spec:
  rules:
  - host: aditya.blog.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-site-blog-service
          servicePort: 80
  - host: webserver.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx-service
          servicePort: 80
